--- a/templates/auth/admin-panel.html
+++ b/templates/auth/admin-panel.html
@@ -6,6 +6,7 @@
 
 {% block body %}
     <div style="max-width: 80%; margin: auto;">
+        <h1 class="fs-1 mt-4 mb-2" style="margin-left: 1%;">Admin Panel</h1>
         <h3 class="fs-3 mt-4 mb-2" style="margin-left: 5%;">All Users</h3>
     </div>
     <div style="max-width: 80%; margin: auto;">
